cmake_minimum_required(VERSION 3.12)
project(Aim_At_Offer)

set(CMAKE_CXX_STANDARD 14)

add_executable(Aim_At_Offer main.cpp duplicate_number/duplicate.cpp duplicate_number/duplicate.h find_number_in_matrix/find_number_in_matrix.cpp find_number_in_matrix/find_number_in_matrix.h string/replace_black.cpp string/replace_black.h)