cmake_minimum_required(VERSION 3.12)
project(Aim_At_Offer)

set(CMAKE_CXX_STANDARD 14)

add_executable(Aim_At_Offer main.cpp duplicate_number/duplicate.cpp duplicate_number/duplicate.h find_number_in_matrix/find_number_in_matrix.cpp find_number_in_matrix/find_number_in_matrix.h string/replace_black.cpp string/replace_black.h list/print_list_reverse.cpp list/print_list_reverse.h tree/construct_tree.cpp tree/construct_tree.h tree/binary_tree_find_next_node.cpp tree/binary_tree_find_next_node.h stack_and_queue/Queue.cpp stack_and_queue/Queue.h include.h fibonacci/fibonacci.cpp fibonacci/fibonacci.h find_min_in_rotate_array/find_min_in_roate_array.h find_min_in_rotate_array/find_min_in_roate_array.cpp backtracking/path_in_matrix.cpp backtracking/path_in_matrix.h)